# engage

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.github/workflows/: security.yml
assets/windows/: engage.rc
docs/: format.md
installer/: engage.iss
src/: cancel.rs  error.rs  format.rs  index.rs  keystore.rs  lib.rs  main.rs  pq.rs  progress.rs
src/archive/: create.rs  mod.rs  parallel_zstd.rs  path.rs
src/gui/: archive_table.rs  mod.rs  preferences.rs  service.rs
tests/: archive_roundtrip.rs
