[package]
name = "engage"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.12.1"
age-core = "0.12.0"
age-hpke-pq = { path = "vendor/age-hpke-pq" }
base64 = "0.22"
bech32 = "0.12"
blake3 = "1.8"
cap-fs-ext = "4.0.2"
cap-std = "4.0.2"
clap = { version = "4.6", features = ["derive"] }
crc32fast = "1.5"
dirs = "6.0"
eros = "0.6"
filetime = "0.2"
rpassword = "7.5"
same-file = "1.0"
tar = "0.4.46"
tempfile = "3.27"
uuid = { version = "1", features = ["v4"] }
zeekstd = "0.6.2"
zeroize = "1.9"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.11"

[[bin]]
name = "engage"
path = "src/main.rs"

[[bin]]
name = "engage-cli"
path = "src/bin/engage-cli.rs"

[target.'cfg(windows)'.dependencies]
async-channel = "2.5"
chrono = "0.4"
clipboard-win = "5.4.1"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
